--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,13 @@ body {
 
 .container {
     margin: auto;
-    margin-top: 10rem;
+    margin-top: 5rem;
     height: 20rem;
     width: 25rem;
 }
 
 .top {
-    background-color: blue;
+    background-color: #6a96d8;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -38,19 +38,19 @@ img:hover {
 h4 {
     margin-right: 9rem;
     font-family: sans-serif;
-    color: whitesmoke;
+    color: #e7edf6;
 }
 
 .bottom {
     background-color: white;
-    height: 20rem;
+    height: 29rem;
 }
 
 .line1 {
     margin-top: 0.2rem;
     height: 0.1rem;
     width: 9rem;
-    background-color: wheat;
+    background-color: #999999;
 }
 
 .line {
@@ -60,7 +60,7 @@ h4 {
 }
 
 .p1 {
-    color: wheat;
+    color: #999999;
     font-weight: 100;
     font-size: small;
 }
@@ -68,15 +68,69 @@ h4 {
 h6 {
     font-size: smaller;
     font-weight: 100;
-    color: wheat;
+    color: #999999;
+    margin-left: 1rem;
+    padding-bottom: 0.5rem;
 }
 
 .p2 {
-    background-color: whitesmoke;
+    background-color: #e7edf6;
     margin-right: 7rem;
     margin-left: 1rem;
     border-radius: 3px;
     line-height: 1.6rem;
     font-size: 0.78rem;
     font-weight: 750;
+}
+
+.tmeg2 {
+    margin-left: rem;
+    /* display: flex; */
+    justify-content: flex-end;
+    padding-top: 2rem;
+    padding-left: 3rem;
+}
+
+.p3 {
+    margin-left: 5rem;
+    background-color: whitesmoke;
+    margin-right: 1rem;
+    /* margin-left: 1rem; */
+    border-radius: 3px;
+    line-height: 1.6rem;
+    font-size: 0.78rem;
+    font-weight: 750;
+    /* padding-b: 1rem; */
+    margin-bottom: 2rem;
+}
+
+.h1 {
+    font-size: smaller;
+    font-weight: 100;
+    color: wheat;
+    margin-left: 19rem;
+    padding-bottom: 0.5rem;
+}
+
+.p4 {
+    background-color: whitesmoke;
+    margin-right: 19rem;
+    margin-left: 1rem;
+    border-radius: 3px;
+    line-height: 1.6rem;
+    font-size: 0.78rem;
+    font-weight: 750;
+}
+
+.p5 {
+    margin-left: 9rem;
+    background-color: #fec1c0;
+    margin-right: 1rem;
+    /* margin-left: 1rem; */
+    border-radius: 3px;
+    line-height: 1.6rem;
+    font-size: 0.78rem;
+    font-weight: 750;
+    /* padding-b: 1rem; */
+    margin-bottom: 2rem;
 }
