update code base

--- a/css/style.css
+++ b/css/style.css
@@ -162,10 +162,23 @@ h5 {
 
 .p9 {
     margin-left: 1rem;
-    color: #999999;
+    color: black;
     margin-top: 1rem;
+    border: none;
+}
+
+input:focus {
+    outline: none;
+}
+
+::placeholder {
+    color: #999999;
 }
 
 .big {
     border-top: #e4e1e1 solid 0.01rem;
+}
+
+h5:hover {
+    cursor: pointer;
 }
